test/libsolidity/syntaxTests/constructor/library_constructor_new.sol
library Lib {
	constructor() public;
}
// ----
// TypeError: (15-36): Constructor cannot be defined in libraries.
// TypeError: (15-36): Constructor must be implemented if declared.
